--- a/regist_vhid/index.html
+++ b/regist_vhid/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="form">
     <label>Ім'я</label><br>
     <input type="text" id="namee"><br><br>
     <label>Прізвище</label><br>
@@ -18,7 +19,10 @@
     <label>Пароль</label><br>
     <input type="text" id="pass"><br><br>
     <button onclick="emailVhid()">Зареєструватися</button><br><br>
-    <button onclick="googleVhid()">Вхід за допомогою Гугл</button><br>
+    <button onclick="googleVhid()">Вхід за допомогою Гугл</button><br><br>
+    <button onclick="changeForm()">У мене вже є акаунт</button>
+        </div>
+    
 
     <script src="https://www.gstatic.com/firebasejs/6.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.0.0/firebase-firestore.js"></script>
